--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,12 @@
 </head>
 <body>
     <main class='container'>
+        
         <header class='center' id='Header'></header>
         <section id='content'>
             <div class='loading'></div>
         </section>
     </main>
 </body>
+<script src="main.js"></script>
 </html>
